# rag-clinico

./: .env.example  .gitignore  CONTRIBUICOES.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: embeddings.md  ingestao-e-chunking.md
eval/: compare_chunking.py  evaluate.py  results.md  test_questions.json
src/: app.py  chunking.py  embeddings.py  ingest.py  prompts.py  rag_chain.py  retriever.py  storage.py  vectorstore.py
tests/: test_vectorstore_retriever.py
