[project]
name = "rag-clinico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pdfplumber>=0.11.10",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
]
